adding modfying UI paddingView to textFields

--- a/iOS_Rasid/Modules/AddBranch/Scenes/BranchDetails/View/View Controller/ar.lproj/BranchDetailsViewController.strings
+++ b/iOS_Rasid/Modules/AddBranch/Scenes/BranchDetails/View/View Controller/ar.lproj/BranchDetailsViewController.strings
@@ -48,7 +48,7 @@
 "raK-wA-cVP.configuration.title" = "Button";
 
 /* Class = "UIButton"; normalTitle = "Button"; ObjectID = "raK-wA-cVP"; */
-"raK-wA-cVP.normalTitle" = "Button";
+"raK-wA-cVP.normalTitle" = "تعديل";
 
 /* Class = "UILabel"; text = "Label"; ObjectID = "uPK-QR-yYS"; */
 "uPK-QR-yYS.text" = "Label";
